--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,7 +7,7 @@
     tools:context=".MainActivity">
 
     <ListView
-        android:id="@+id/song_list"
+        android:id="@+id/artist_list"
         android:layout_width="match_parent"
         android:layout_height="wrap_content" />
 
