--- a/app/src/main/res/layout/artist.xml
+++ b/app/src/main/res/layout/artist.xml
@@ -1,14 +1,44 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical"
+    android:orientation="horizontal"
     android:layout_width="match_parent"
-    android:layout_height="100dp">
-    
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/artist_name"/>
-    
+    android:layout_height="100dp"
+    android:padding="5dp"
+    android:background="@color/background">
+
+    <ImageView
+        android:background="@color/image_alt"
+        android:layout_width="90dp"
+        android:layout_height="90dp"
+        android:id="@+id/artist_image" />
+
+    <LinearLayout
+        android:orientation="vertical"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:padding="10dp">
+
+        <TextView
+            android:textColor="@color/black87"
+            android:textSize="16sp"
+            android:layout_width="wrap_content"
+            android:layout_height="0dp"
+            android:layout_weight="1"
+            android:gravity="bottom"
+            android:text="The Doors"
+            android:id="@+id/artist_name"/>
+
+
+        <TextView
+            android:textColor="@color/black54"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_weight="1"
+            android:textSize="14sp"
+            android:text="10 albums, 122 songs"
+            android:id="@+id/artist_description"/>
+
+    </LinearLayout>
 
 </LinearLayout>
