--- a/app/src/main/res/layout/artist.xml
+++ b/app/src/main/res/layout/artist.xml
@@ -11,6 +11,7 @@
         android:background="@color/image_alt"
         android:layout_width="90dp"
         android:layout_height="90dp"
+        android:scaleType="centerCrop"
         android:id="@+id/artist_image" />
 
     <LinearLayout
