--- a/app/src/main/res/layout/artist.xml
+++ b/app/src/main/res/layout/artist.xml
@@ -4,15 +4,17 @@
     android:orientation="horizontal"
     android:layout_width="match_parent"
     android:layout_height="100dp"
-    android:padding="5dp"
-    android:background="@color/background"
-    android:onClick="startArtistActivity">
+    android:paddingLeft="10dp"
+    android:paddingRight="10dp"
+    android:paddingBottom="5dp"
+    android:paddingTop="5dp"
+    android:background="@color/background">
 
     <ImageView
         android:background="@color/image_alt"
         android:layout_width="90dp"
         android:layout_height="90dp"
-        android:scaleType="center"
+        android:scaleType="centerCrop"
         android:id="@+id/artist_image" />
 
     <LinearLayout
