Implement inflating albums list

--- a/app/src/main/res/layout/activity_artist.xml
+++ b/app/src/main/res/layout/activity_artist.xml
@@ -5,4 +5,9 @@
     android:orientation="vertical"
     tools:context="com.neeplayer.ArtistActivity">
 
+    <ListView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:id="@+id/album_list"/>
+
 </LinearLayout>
