--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -9,7 +9,6 @@
     <ListView
         android:id="@+id/artist_list"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:padding="5dp"/>
+        android:layout_height="wrap_content"/>
 
 </LinearLayout>
