Show ripple effect on selection

--- a/app/src/main/res/layout/activity_artist.xml
+++ b/app/src/main/res/layout/activity_artist.xml
@@ -8,6 +8,8 @@
     <ListView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:id="@+id/album_list"/>
+        android:id="@+id/album_list"
+        android:choiceMode="singleChoice"
+        android:drawSelectorOnTop="true"/>
 
 </LinearLayout>
