--- a/app/src/main/res/layout/artist.xml
+++ b/app/src/main/res/layout/artist.xml
@@ -7,8 +7,7 @@
     android:paddingLeft="10dp"
     android:paddingRight="10dp"
     android:paddingBottom="5dp"
-    android:paddingTop="5dp"
-    android:background="@color/background">
+    android:paddingTop="5dp">
 
     <ImageView
         android:background="@color/image_alt"
