Create layout stub for now playing activity

--- a/app/src/main/res/layout/activity_now_playing.xml
+++ b/app/src/main/res/layout/activity_now_playing.xml
@@ -3,12 +3,25 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
+    android:id="@+id/np_layout"
     tools:context="com.neeplayer.NowPlayingActivity">
 
+    <ImageView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:scaleType="fitCenter"
+        android:adjustViewBounds="true"
+        android:id="@+id/np_album_art"/>
+
     <TextView
-        android:id="@+id/intent_params"
-        android:text="@string/hello_world"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/np_song_title"/>
+
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/np_artist_and_album"/>
 
 </LinearLayout>
