--- a/app/src/main/res/layout/album.xml
+++ b/app/src/main/res/layout/album.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
@@ -33,7 +33,7 @@
                 android:id="@+id/album_title"
                 android:textSize="16sp"
                 android:textColor="@color/black87"
-                android:text="Desire"/>
+                tools:text="Desire"/>
 
             <TextView
                 android:layout_width="wrap_content"
@@ -41,7 +41,7 @@
                 android:id="@+id/album_info"
                 android:textSize="14sp"
                 android:textColor="@color/black54"
-                android:text="12 songs, 57 min"/>
+                tools:text="12 songs, 57 min"/>
 
             <TextView
                 android:layout_width="wrap_content"
@@ -49,7 +49,7 @@
                 android:id="@+id/album_year"
                 android:textSize="14sp"
                 android:textColor="@color/black54"
-                android:text="1975"/>
+                tools:text="1975"/>
 
         </LinearLayout>
 
