--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -8,8 +8,31 @@
     <style name="NotificationButton">
         <item name="android:layout_width">wrap_content</item>
         <item name="android:layout_height">wrap_content</item>
-        <item name="android:padding">8dp</item>
+        <item name="android:padding">4dp</item>
         <item name="android:background">@null</item>
+    </style>
+
+    <style name="NotificationButton.Small"/>
+
+    <style name="NotificationButton.Big">
+        <item name="android:padding">16dp</item>
+    </style>
+
+    <style name="Text">
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:maxLines">1</item>
+        <item name="android:ellipsize">end</item>
+    </style>
+
+    <style name="Text.Title">
+        <item name="android:textSize">16sp</item>
+        <item name="android:textColor">@color/black87</item>
+    </style>
+
+    <style name="Text.Regular">
+        <item name="android:textSize">14sp</item>
+        <item name="android:textColor">@color/black54</item>
     </style>
 
 </resources>
