--- a/app/src/main/res/layout/song.xml
+++ b/app/src/main/res/layout/song.xml
@@ -20,6 +20,7 @@
         android:paddingRight="25dp"
         android:clickable="true"
         android:focusable="true"
+        android:background="?android:attr/selectableItemBackground"
         android:onClick="songPicked">
 
 
